# bibtex-project

./: .gitignore  .pylintrc  README.md  pyproject.toml  retro.md
.github/workflows/: main.yml
data/: bibtex.bib  citations.txt  dd.txt  example.tex
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  CitationDialog.jsx  CitationsTable.jsx  DoiDialog.jsx
src/: acm_demo.py  acm_test.py  app.py  article.py  citation.py  citations.txt  command_line.py  database.py  main.py  routes.py
src/test/: test_article.py  test_citation.py  test_command_line.py  test_database.py
src/tests/: article_test.py
